# vanitygen-bip39

./: Cargo.toml  README.md
src/: main.rs
