[package]
edition = "2021"
name = "vanitygen-bip39"
version = "0.1.0"

[dependencies]
bip0039 = "0.11.0"
clap = {version = "4.3.24", features = ["derive"]}
hex = "0.4.3"
libsecp256k1 = "0.7.0"
num_cpus = "1.13.1"
reqwest = {version = "0.11.8", features = ["blocking", "json"]}
tiny-hderive = "0.3.0"
tiny-keccak = {version = "2.0.2", features = ['keccak']}
